--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Publications"
     url: "/#-publications"
   
-  - title: "Blog"
-    url: "/blog/"
+  # - title: "Blog"
+  #   url: "/blog/"
 
 
   #- title: "Honors and Awards"
