--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ author:
   vine             :
   weibo            :
   rednote          : #"https://www.xiaohongshu.com/user/profile/5bfa92d7dc17a9000178dd0f?xsec_token=YBTqNzJvAAwDnHz8W1Rqh93EtDo_JGemMCGva-qLzqQZs=&xsec_source=app_share&xhsshare=CopyLink&appuid=5bfa92d7dc17a9000178dd0f&apptime=1751583810&share_id=419374e1e3634ff892255b5729feea18"
-  twitter          : "yzhuml?s=21"
+  twitter          : "YzhuML"
   youtube          :
   wikipedia        :
   resume           : "./pdf/Yuanzhe_Hu_CV_Jun_2025.pdf"
