--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   twitter          : "YzhuML"
   youtube          :
   wikipedia        :
-  resume           : "./pdf/Yuanzhe_Hu_CV_one_page_phd.pdf"
+  CV           : "./pdf/Yuanzhe_Hu_CV.pdf"
   
 
 # Reading Files
