--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "La Jolla, CA, USA"
   employer         :
   pubmed           : 
-  googlescholar    : # "https://scholar.google.com/citations?user=ehBiQEUAAAAJ&hl=en&authuser=2"
+  googlescholar    : "https://scholar.google.com/citations?user=ehBiQEUAAAAJ&hl=en&authuser=2"
   email            : "yzhu.ml@outlook.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
