--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=ehBiQEUAAAAJ&hl=en&authuser=2"
+  semanticscholar  : "https://www.semanticscholar.org/author/Yuanzhe-Hu/2326252204"
   email            : "yzhu.ml@outlook.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
